Fixed positioning of logo on mobile view.

--- a/css/grid.css
+++ b/css/grid.css
@@ -70,7 +70,7 @@
 	header img {
 		grid-area: logo;
 		height: 4em;
-		margin: 0 auto 0 45%;
+		margin: 0 auto 0 40%;
 	}
 	nav {
 		grid-area: nav;
